tests/neg-custom-args/captures/widen-reach.check
-- Error: tests/neg-custom-args/captures/widen-reach.scala:8:18 --------------------------------------------------------
8 |trait Bar extends Foo[IO^]: // error
  |                  ^^^^^^^^
  |                  Type variable T of trait Foo cannot be instantiated to IO^ since
  |                  that type captures the root capability `any`.
  |
  |                  where:    ^ refers to the root capability caps.any
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:9:24 -----------------------------------
9 |  val foo: IO^ -> IO^ = x => x // error
  |                        ^^^^^^
  |                      Found:    (x: IO^) ->'s1 IO^{fresh}
  |                      Required: IO^ -> IO^{any}
  |
  |                      Note that capability `fresh` is not included in capture set {any}
  |                      because fresh is not visible from any in value foo.
  |
  |                      where:    ^     refers to the root capability caps.any
  |                                any   is a root capability in the type of value foo
  |                                fresh is a root capability associated with the result type of (x: IO^): IO^{fresh}
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:13:26 ----------------------------------
13 |  val y2: IO^ -> IO^ = y1.foo      // error
   |                       ^^^^^^
   |                       Found:    IO^ ->{x*} IO^{x*}
   |                       Required: IO^ -> IO^²
   |
   |                       Note that capability `x*` is not included in capture set {}.
   |
   |                       where:    ^  refers to the root capability caps.any
   |                                 ^² refers to a root capability in the type of value y2
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:14:30 ----------------------------------
14 |  val y3: IO^ -> IO^{x*} = y1.foo  // error
   |                           ^^^^^^
   |                           Found:    IO^ ->{x*} IO^{x*}
   |                           Required: IO^ -> IO^{x*}
   |
   |                           Note that capability `x*` is not included in capture set {}.
   |
   |                           where:    ^ refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
